--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <img src="assets/images/photo-1695690618946-96x96.png" alt="Mobirise Website Builder"
                   style="height: 3rem;">
               </a> </span> <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-2"
-                href="https://mobiri.se">visarun</a></span>
+                href="index.html">visarun</a></span>
           </div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse"
             data-target="#navbarSupportedContent"
