--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           </div>
           <div class="col-12 mt-4">
             <p class="mbr-text mb-0 mbr-fonts-style copyright align-center display-7">
-              © Copyright 2025 joinvisarun- All Rights Reserved<br>
+              © 2023 visarun- All Rights Reserved<br>
               <br>
               Use of this Site is subject to express terms of use. By using this
               site,<br>
